--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Dbots.js Documentation",
-  "short_name": "Dbots.js Docs",
+  "name": "Dbots Documentation",
+  "short_name": "Dbots Docs",
   "theme_color": "#00b2e8",
   "background_color": "#2f3236",
   "display": "browser",
