--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,8 @@ name: Deploy
 on:
   push:
     paths:
-      - "./dist/**"
+      - dist/**
+      - .github/workflows/deploy.yml
 
 jobs:
   deploy:
