--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,4 +14,5 @@ jobs:
 
       - run: git config user.name "${GITHUB_ACTOR}"
       - run: git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
+      - run: git fetch
       - run: git subtree push --prefix dist origin master
