--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,5 +16,5 @@ jobs:
 
       - run: git config user.name "${GITHUB_ACTOR}"
       - run: git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
-      - run: git fetch && git checkout master && git pull && git checkout stable
-      - run: git subtree push --prefix dist origin master
+      - run: git fetch
+      - run: git subtree push --prefix dist origin master --force
