--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,4 +17,4 @@ jobs:
       - run: git config user.name "${GITHUB_ACTOR}"
       - run: git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
       - run: git fetch
-      - run: git push origin `git subtree push --prefix dist origin`:master --force
+      - run: git push origin `git subtree split --prefix dist stable`:master --force
