--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "dbots-website",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "description": "The website housing documentation for dbots",
   "author": "Federico Grandi <fgrandi30@gmail.com>",
   "contributors": [
-    "Schuyler Cebulskie <Gawdl3y@gawdl3y.com>"
+    "Schuyler Cebulskie <Gawdl3y@gawdl3y.com>",
+    "Snazzah <suggesttosnazzy@gmail.com>"
   ],
   "private": true,
   "scripts": {
