--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,9 @@
-name: Testing
+name: Test and build
 on:
   push:
     paths:
       - src/**
+      - .github/workflows/build.yml
   pull_request:
     paths:
       - src/**
