--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,8 @@
-name: Test and build
+name: Testing
 on:
   push:
     paths:
       - src/**
-      - .github/workflows/build.yml
   pull_request:
     paths:
       - src/**
@@ -44,11 +43,3 @@ jobs:
 
       - name: Test site build
         run: yarn build
-
-      - name: Commit changes if build has been successful
-        uses: EndBug/add-and-commit@v4
-        with:
-          add: dist
-          message: "[auto] Commit dist"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
