--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,3 +20,21 @@ jobs:
       - run: npm run dist
 
       - run: git push origin `git subtree split --prefix dist stable`:master --force
+
+  lint:
+    name: Lint stable branch
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 12
+
+      - run: npm run lint
+
+      - uses: EndBug/add-and-commit@v4
+        with:
+          add: src
+          message: "[auto] Lint source code"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
