--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,7 @@ jobs:
         with:
           node-version: 12
 
+      - run: npm i
       - run: npm run lint
 
       - uses: EndBug/add-and-commit@v4
