--- a/package.json
+++ b/package.json
@@ -1,23 +1,19 @@
 {
   "name": "dbots-website",
   "version": "2.3.0",
+  "private": true,
   "description": "The website housing documentation for dbots",
   "author": "Federico Grandi <fgrandi30@gmail.com>",
-  "contributors": [
-    "Schuyler Cebulskie <Gawdl3y@gawdl3y.com>",
-    "Snazzah <suggesttosnazzy@gmail.com>"
-  ],
-  "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "serve:production": "vue-cli-service serve --mode production",
     "build": "vue-cli-service build",
     "dist": "echo Preparing for distribution... && npm i && npm run build && git add dist --force && git commit -m \"Update dist files\"",
-    "lint": "vue-cli-service lint",
+    "lint": "vue-cli-service lint --fix",
+    "serve": "vue-cli-service serve",
+    "serve:production": "vue-cli-service serve --mode production",
     "test": "if test \"$NODE_ENV\" = \"workflow\"; then echo ok; else echo no; fi"
   },
   "dependencies": {
-    "core-js": "^2.6.5",
+    "core-js": "^3.6.4",
     "fuse.js": "^3.4.5",
     "konami-code-js": "^0.8.1",
     "marked": "^0.7.0",
@@ -26,14 +22,18 @@
     "vue-router": "^3.0.3"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.11.0",
-    "@vue/cli-plugin-eslint": "^3.11.0",
-    "@vue/cli-service": "^3.11.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "sass": "^1.18.0",
+    "@vue/cli-plugin-babel": "~4.3.1",
+    "@vue/cli-plugin-eslint": "~4.3.1",
+    "@vue/cli-service": "~4.3.1",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^6.2.2",
+    "sass": "^1.26.3",
     "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.6.10"
-  }
+  },
+  "contributors": [
+    "Schuyler Cebulskie <Gawdl3y@gawdl3y.com>",
+    "Snazzah <suggesttosnazzy@gmail.com>"
+  ]
 }
